--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
 
 
     </div>
+    <script src="/assets/js/filesize.js"></script>
     <!--<script src="{{ '/assets/js/anchor.min.js' | relative_url }}"></script>-->
     <!--<script>anchors.add('h2:not(.no_anchor), h3, h4');</script>-->
   </body>
